--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "core-js": "^3.6.5",
+    "axios": "^0.19.2",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
