--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "cordova-android": "^8.1.0",
     "cordova-ios": "^5.1.1",
-    "cordova-plugin-camera": "^4.1.0"
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-x-socialsharing": "^5.6.8"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
@@ -23,6 +25,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-splashscreen": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
