--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
+    "jspdf": "^2.1.0",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
